--- a/views/item.ejs
+++ b/views/item.ejs
@@ -19,6 +19,7 @@
     <hr>
     <h6><%= itemCity %>, <%=itemState %></h6>
     <h6><%= itemDesc %></h6>
+    <h6><%= itemViews %></h6>
   </div>
 </div>
 
