--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -128,7 +128,7 @@
       </div>
       <% } %>
       <div class="btn-cart">
-        <a style="padding: .375rem 10px;" class="btn btn-light btn-med" href="/cart" role="button"><i
+        <a style="padding: .450rem 12px .3rem 8px;" class="btn btn-light btn-med" href="/cart" role="button"><i
             style="font-size: 20px;" class='fas fa-shopping-cart'></i></a>
       </div>
     </div>
