--- a/views/payment-methods.ejs
+++ b/views/payment-methods.ejs
@@ -81,7 +81,7 @@
                 </div>
             </div>
         </div>
-        <button type="submit" id="add-payment" class="btn btn-dark btn-sm btn-block" style="background-color: #212529;"">Add Payment Method</button>
+        <button type="submit" id="add-payment" class="btn btn-dar btn-sm btn-block" style="background-color: #212529;"">Add Payment Method</button>
 </div>
 
 
