--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,6 +9,10 @@
     <div class="sign-in-default">
       <form action="/register" method="POST">
         <div class="form-group">
+          <label for="fullname">Full Name</label>
+          <input type="text" class="form-control" name="fullname" id="fullname" required>
+        </div>
+        <div class="form-group">
           <label for="email">Email</label>
           <input type="email" class="form-control" name="username" id="username" required>
         </div>
