moved http requests to their proper methods

--- a/views/delete-account.ejs
+++ b/views/delete-account.ejs
@@ -10,7 +10,7 @@ Any of your pending orders will still be completed by the seller.
 You may be required to complete any orders for items you are selling.
 <br>
 
-<form action="delete-account" method="POST" onsubmit="return confirm('Are you sure you want to delete your account? This is permanent and cannot be reversed.');">
+<form action="delete-account?_method=DELETE" method="POST" onsubmit="return confirm('Are you sure you want to delete your account? This is permanent and cannot be reversed.');">
     <button type="submit">Delete account</button>
 </form>
 
