--- a/views/item-upload.ejs
+++ b/views/item-upload.ejs
@@ -7,7 +7,7 @@
 </div>
 
 <div class="item-details">
-    <form action="database-add" method="POST" enctype="multipart/form-data">
+    <form action="database-add?_method=PUT" method="POST" enctype="multipart/form-data">
         <div class="name-type">
             <div class="form-group" style="padding-right: 20px; width: 50%;">
                 <label for="name">Name of item</label>
