--- a/views/payment-methods.ejs
+++ b/views/payment-methods.ejs
@@ -31,7 +31,7 @@
     <button class="btn btn-dark btn-sm" onclick="openAddPaymentMethod()" style="background-color: #212529;">Add new
         payment method</button>
 
-    <form class="payment-method-form" method="POST" action="payment-add">
+    <form class="payment-method-form" method="POST" action="payment-add?_method=PUT">
         <a class="close-button" onclick="closeAddPaymentMethod()">&#x2715</a>
         <!-- <button>&times;</button> -->
         <!-- <button type="button" class="close" aria-label="Close">
