--- a/views/addresses.ejs
+++ b/views/addresses.ejs
@@ -8,7 +8,7 @@
         <% addressList.forEach(function(addy) { %>
         <div class="outer-addy">
             <div class="inner-addy">
-                <form action="delete-address" method="POST"
+                <form action="delete-address?_method=DELETE" method="POST"
                     onsubmit="return confirm('Are you sure you want to delete this address?');">
                     <div>
                         <input name="addressID" style="display:none;" value="<%= addy._id %>">
@@ -27,7 +27,7 @@
     </div>
 
     <button onclick="toggleAddAddress()">Add new address</button>
-    <form class="address-form" method="POST" action="address-add">
+    <form class="address-form" method="POST" action="address-add?_method=PUT">
         <div class="form-group">
             <label for="fullname">Full Name:</label>
             <input name="fullname" type="text" class="form-control" id="fullname" required>
