--- a/views/edit-item.ejs
+++ b/views/edit-item.ejs
@@ -2,7 +2,7 @@
 
 
 <div class="edit-form">
-    <form action="database-edit" method="POST">
+    <form action="database-edit?_method=PATCH" method="POST">
         <input name="itemID" style="display:none" type="text" value="<%= itemID %>">
         <div class="form-group">
             <label for="name">Name of item:</label>
@@ -114,7 +114,7 @@
         </div>
         <button id="edit-item" class="btn btn-primary btn-lg btn-block">Confirm Changes</button>
     </form>
-    <form action="delete-item" method="POST">
+    <form action="delete-item?_method=DELETE" method="POST">
         <input name="itemID" style="display:none" type="text" value="<%= itemID %>">
         <button type="submit">deLEtE ItEm</button>
     </form>
